# SortAlgs

./: CMakeLists.txt  README.md
c/: CMakeLists.txt  indx_list.c  indx_list.h  main.c  sort_algs.c  sort_algs.h  sort_algs_tests.c
c/report/log.i9-10900K.macos/: perf.numbers  summary.txt
c/results/: log.i9-10900K.macos.txt
python/: indx_list.py  main.py  msort.py  qsort.py  unit_test_is_sorted.py
python/report/log.i9-10900K.macos/: perf.numbers
python/results/: log.i9-10900K.macos.python3.10.txt  log.i9-10900K.macos.python3.10_bad_init_distribution.txt  log.txt
